# gradip_CI

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: PR-message.yml  test.yml
include/CardSystem/: BankAccount.h  Card.h  InsufficientBalanceException.h  Rate.h  TimeService.h  ZoneA.h  ZoneB.h  ZoneRateInterface.h
src/CardSystem/: BankAccount.cpp  Card.cpp  InsufficientBalanceException.cpp  TimeService.cpp  ZoneA.cpp  ZoneB.cpp
test/: CMakeLists.txt
test/CardSystem/: BankAccountTest.cpp  CardTest.cpp  TimeServiceTest.cpp
